feat: add a11y for menu items

--- a/index.html
+++ b/index.html
@@ -74,17 +74,14 @@
                       <a href="#">Administration</a>
                     </li>
                     <li role="menuitem" tabindex="-1">
-                      <a href="#">Team Settings</a>
+                      <a href="#about">About</a>
                     </li>
                     <li role="menuitem" tabindex="-1">
-                      <a href="#">Manage Your Team</a>
-                    </li>
-                    <li role="menuitem" tabindex="-1">
-                      <a href="#">Invitations</a>
+                      <a href="#keyFeatures">Key Features</a>
                     </li>
                     <li role="separator"></li>
                     <li role="menuitem" tabindex="-1">
-                      <a href="#">Authentication</a>
+                      <a href="#topics">Topics</a>
                     </li>
                   </ul>
                 </li>
@@ -106,17 +103,17 @@
                     aria-label="Documentation"
                   >
                     <li role="menuitem" tabindex="-1">
-                      <a href="#">Documentation</a>
+                      <a href="#services">Services</a>
                     </li>
                     <li role="menuitem" tabindex="-1">
-                      <a href="#">Team Settings</a>
+                      <a href="#about">About</a>
                     </li>
                     <li role="menuitem" tabindex="-1">
-                      <a href="#">Invitations</a>
+                      <a href="#keyFeatures">Key Features</a>
                     </li>
                     <li role="separator"></li>
                     <li role="menuitem" tabindex="-1">
-                      <a href="#">Authentication</a>
+                      <a href="#topics">Topics</a>
                     </li>
                   </ul>
                 </li>
