--- a/index.html
+++ b/index.html
@@ -165,30 +165,34 @@
           </pre>
       <p>Maecenas eleifend sollicitudin dui, faucibus sollicitudin augue cursus non. Ut finibus eleifend arcu ut vehicula. Mauris eu est maximus est porta condimentum in eu justo. Nulla id iaculis sapien.</p>
       <table>
-        <tr>
-          <td>Header</td>
-          <td>Header</td>
-        </tr>
-        <tr>
-          <td>cell</td>
-          <td>cell</td>
-        </tr>
-        <tr>
-          <td>cell</td>
-          <td>cell</td>
-        </tr>
-        <tr>
-          <td>cell</td>
-          <td>cell</td>
-        </tr>
-        <tr>
-          <td>cell</td>
-          <td>cell</td>
-        </tr>
-        <tr>
-          <td>cell</td>
-          <td>cell</td>
-        </tr>
+        <thead>
+          <tr>
+            <td>Header</td>
+            <td>Header</td>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>cell</td>
+            <td>cell</td>
+          </tr>
+          <tr>
+            <td>cell</td>
+            <td>cell</td>
+          </tr>
+          <tr>
+            <td>cell</td>
+            <td>cell</td>
+          </tr>
+          <tr>
+            <td>cell</td>
+            <td>cell</td>
+          </tr>
+          <tr>
+            <td>cell</td>
+            <td>cell</td>
+          </tr>
+        </tbody>
       </table>
       <p>Phasellus porttitor enim id metus volutpat ultricies. Ut nisi nunc, blandit sed dapibus at, vestibulum in felis. Etiam iaculis lorem ac nibh bibendum rhoncus. Nam interdum efficitur ligula sit amet ullamcorper. Etiam tristique, leo vitae porta faucibus, mi lacus laoreet metus, at cursus leo est vel tellus. Sed ac posuere est. Nunc ultricies nunc neque, vitae ultricies ex sodales quis. Aliquam eu nibh in libero accumsan pulvinar. Nullam nec nisl placerat, pretium metus vel, euismod ipsum. Proin tempor cursus nisl vel condimentum. Nam pharetra varius metus non pellentesque.</p>
       <h5 class="is-5 title" id="fifth-level">Fifth level</h5>
