[fix-1] Test commit

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
   <div class="section" id="about">
     <div class="section-heading has-text-centered">
       <div class="title is-2">About Us</div>
-      <div class="subtitle is-5">We of all trades, master of "some"</div>
+      <div class="subtitle is-5">We of all trades  master of "some"</div>
       <div class="container">
         <p>Web developers with more than <b>4 years</b> of well-rounded experience with a degree in the
           field of
